<?xml version="1.0"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>swiftpass</groupId>
		<artifactId>privateCloud</artifactId>
		<version>1.0</version>
	</parent>

	<groupId>testcase</groupId>
	<artifactId>testcase</artifactId>
	<name>testcase</name>
	<url>http://maven.apache.org</url>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>page</groupId>
			<artifactId>page</artifactId>
			<version>1.0</version>
			<exclusions>
				<exclusion>
					<artifactId>testng</artifactId>
					<groupId>org.testng</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>6.8.7</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>3.4.0</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.dom4j/dom4j -->
		<dependency>
			<groupId>org.dom4j</groupId>
			<artifactId>dom4j</artifactId>
			<version>2.0.0</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19.1</version>
				<dependencies>
					<!-- <dependency> <groupId>org.apache.maven.surefire</groupId> <artifactId>surefire-junit412</artifactId> 
						</dependency> -->
					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>surefire-testng</artifactId>
						<version>2.19.1</version>
					</dependency>

					<!-- https://mvnrepository.com/artifact/com.google.inject/guice -->
					<dependency>
						<groupId>com.google.inject</groupId>
						<artifactId>guice</artifactId>
						<version>3.0</version>
					</dependency>


					<dependency>
						<groupId>org.uncommons</groupId>
						<artifactId>reportng</artifactId>
						<version>1.1.2</version>
					</dependency>

					<!-- https://mvnrepository.com/artifact/org.testng/testng -->
					<dependency>
						<groupId>org.testng</groupId>
						<artifactId>testng</artifactId>
						<version>6.8.7</version>
					</dependency>


					<dependency>
						<groupId>com.google.inject</groupId>
						<artifactId>guice</artifactId>
						<version>4.1.0</version>
						<!-- <classifier>no_aop</classifier> <scope>test</scope> -->
					</dependency>

					<dependency>
						<groupId>velocity</groupId>
						<artifactId>velocity-dep</artifactId>
						<version>1.4</version>
					</dependency>

				</dependencies>
				<configuration>
					<!-- 解决用maven执行test时 日志乱码的问题，详见：http://www.cnblogs.com/discuss/archive/2010/10/27/1862225.html -->
					<argLine>-Dfile.encoding=UTF-8</argLine>
					<!-- 解决maven oom问题http://blog.csdn.net/e5945/article/details/7740904 -->
					<argLine>-Xms512m -Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=128m</argLine>
					<forkCount>0</forkCount>
					<!--定义maven运行测试生成的报表路径 -->
					<reportsDirectory>./result/test-report</reportsDirectory>
					<suiteXmlFiles>
						<suiteXmlFile>swiftpass.xml</suiteXmlFile>
					</suiteXmlFiles>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
